# tiscript

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  rust-toolchain.toml
.github/workflows/: ci.yml
example/: multiple-exports.ts
spec/: arithmatic.ts.stdout  array_empty.ts  array_many.ts  array_many.ts.stdout  array_one.ts  array_one.ts.stdout  array_spread.ts  array_spread.ts.stdout  array_spread1.ts  array_spread1.ts.stdout  array_spread2.ts  array_spread3.ts  array_spread3.ts.stdout  bw_ops.ts  bw_ops.ts.stdout  comments.ts  comments.ts.stdout  err.assign_wrong_type.ts  err.assign_wrong_type.ts.stderr  err.assing_to_const.ts  err.assing_to_const.ts.stderr  err.bigint_plus.ts  err.bigint_plus.ts.stderr  err.const_def_no_init.ts  err.const_def_no_init.ts.stderr  err.incompat_bin_op.ts  err.incompat_bin_op.ts.stderr  err.satisfies.ts  err.satisfies.ts.stderr  eslint.ts  eslint.ts.stdout  export_default.ts.stdout  export_many.ts  export_many.ts.stdout  exports_with_invoke_fn1.ts  exports_with_invoke_fn1.ts.stdout  exports_with_invoke_fn2.ts  exports_with_invoke_fn2.ts.stdout  exports_with_invoke_fn3.ts  exports_with_invoke_fn3.ts.stdout  (+84 more)
spec/types/: foo.ts  one.ts
src/: ast.rs  bytecode.rs  compiler.rs  de.rs  file_io.rs  instructions.rs  lib.rs  main.rs  parser.rs  ser.rs  type_checker.rs  util.rs  value.rs  vm.rs
src/value/: de.rs  mod.rs
tests/: spec.rs  test_de.rs
tiscript2json/: index.mjs  package.json
titys2json/: index.mjs  package.json
tools/: coverage
