[package]
name = "titys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1" }
nom_locate = { version = "4.2" }
memchr = { version = "2.7", default-features = false }
bytecount = { version = "0.6" }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0" }
indexmap = { version = "2.2" }

[dev-dependencies]

