[package]
name = "tiscript"
description = "Turing-Incomplete TypeScript as a Configuration Language"
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/gfx/tiscript"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1" }
nom_locate = { version = "4.2" }
memchr = { version = "2.7", default-features = false }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0" }
indexmap = { version = "2.2" }

[dev-dependencies]
pretty_assertions = { version = "1.4" }
serde = { version = "1.0", features = ["derive"] }
